#F-235 Fixed Refactoring Inverse calculations: stable regularization